refactor: Simplify index.html by removing unnecessary HTML structure and adding header with logo

--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ayyan shaikh</title>
-  </head>
-  <body class="bg-gray-50">
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
-</html>
+<body class="bg-gray-50">
+  <div id="root"></div>
+  
+  <header class="flex items-center gap-2 p-4">
+    <img src="A.png" alt="Logo" class="w-8 h-8" />
+    <h1 class="text-xl font-bold">Ayyan Shaikh</h1>
+  </header>
+
+  <script type="module" src="/src/main.jsx"></script>
+</body>
